--- a/Echo/res/values/strings.xml
+++ b/Echo/res/values/strings.xml
@@ -34,10 +34,11 @@
     <string name="settings_play_desc">Play</string>
     <string name="settings_toggle">Toggle</string>
     
-    
-    
-    
-    
+    <!-- Add Audio Dialog Fragment -->
+    <string name="audio_dlg_hint">Name the sample</string>
+    <string name="audio_dlg_prompt">To add a new sample, enter a name for the sample in the text box, then press Ready!</string>
+    <string name="audio_dlg_cancel">Cancel</string>
+    <string name="audio_dlg_ready">Ready!</string>        
     
     <!-- Old Screens Not Used -->
     <!-- Start Screen -->
@@ -59,11 +60,6 @@
     <!-- Device Status -->
 
 
-    <!-- Audio Upload -->
-    <string name="audio_upload_b">Upload Sample</string>
-    <string name="audio_upload_dlg_title">To add a new sample:</string>
-    <string name="audio_upload_dlg_cancel">Cancel</string>
-    <string name="audio_upload_dlg_continue">Go</string>
     
 </resources>
     
