--- a/Echo/res/values/strings.xml
+++ b/Echo/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_new_account">Create an Account</string>
     <string name="title_activity_device_reg">Add Existing Device</string>
-    <string name="title_activity_device_setup">Setup New Device</string>
+    <string name="title_activity_device_setup">EchoBox WiFi Setup</string>
     <string name="title_activity_notification">Echo</string>
     <string name="title_activity_device_status">Status</string>
     <string name="title_activity_audio_upload">Upload Audio</string>
@@ -21,11 +21,17 @@
     <string name="menu_notification_push">Save Settings</string>
     
     <!-- Device Setup -->
-    <string name="dev_setup_b">Configure Device!</string>
+    <string name="dev_setup_b">Save</string>
+    <string name="dev_setup_refresh_b_desc">Refresh</string>
     <string name="dev_setup_net_sel">1. Select your Wireless Network</string>
     <string name="dev_setup_encr_sel">2. Select your network\'s security setting:</string>
     <string name="dev_setup_refresh">Refresh Networks</string>
     <string name="dev_setup_sec_sel">3. Enter your network\'s password:</string>
+    <string name="dev_setup_description">EchoBox\'s WiFi must be configured upon initial setup or anytime the WiFi network it connects to changes.</string>
+    
+    <!-- Device Setup Error Dialog -->
+    <string name="dev_setup_error_dlg_prompt">Echo could not detect your EchoBox!\n\nEnsure your EchoBox is powered on or try resetting your EchoBox.</string>
+    <string name="dev_setup_error_dlg_b_text">Try Again</string>
     
     <!-- Notification Screen -->
     <string name="notification_play_desc">Play</string>
