--- a/Echo/res/values/strings.xml
+++ b/Echo/res/values/strings.xml
@@ -2,23 +2,19 @@
 <resources>
 
     <string name="app_name">Echo</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_new_account">Create an Account</string>
-    <string name="title_activity_device_reg">Add Existing Device</string>
     <string name="title_activity_device_setup">EchoBox WiFi Setup</string>
+    <string name="title_activity_device_setup_progress">EchoBox WiFi Setup</string>
     <string name="title_activity_notification">Echo</string>
-    <string name="title_activity_device_status">Status</string>
-    <string name="title_activity_audio_upload">Upload Audio</string>
     <string name="title_activity_settings">Settings</string>
     
+    
     <!-- Menu Items -->
-    <string name="menu_add_device">Add Existing Device</string>
     <string name="menu_setup_device">Setup New Device</string>
-    <string name="menu_device_status">View Device Status</string>
     <string name="menu_audio_upload">Upload Audio Sample</string>
     <string name="menu_refresh">Refresh</string>
-    <string name="menu_logout">Logout</string>
     <string name="menu_notification_push">Save Settings</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_notifications">Notifications</string>
     
     <!-- Device Setup -->
     <string name="dev_setup_b">Save</string>
