refactor sample playing code and add UI for notification delete

--- a/Echo/res/values/strings.xml
+++ b/Echo/res/values/strings.xml
@@ -36,6 +36,7 @@
     
     <!-- Notification Screen -->
     <string name="notification_play_desc">Play</string>
+    <string name="notification_delete">Delete</string>
     
     <!-- Settings -->
     <string name="settings_play_desc">Play</string>
